<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".OverviewFragment"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <TextView
            android:text="@string/app_name"
            android:textSize="@dimen/h1"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/custom_divider"/>

        <!-- Preferences -->
        <TextView
            android:text="@string/module_name"
            style="@style/text_view_with_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/preferences_header"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_header"
            android:padding="@dimen/padding_header"/>
        <TextView
            android:id="@+id/onResume_counter"
            android:text="@string/preferences_calls"
            style="@style/text_view_with_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/teaPreferenceTextView"
            android:text="@string/preferences_settings"
            style="@style/text_view_with_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/button_edit_preferences"
            android:text="@string/preferences_button_edit"
            android:background="@drawable/button_angular"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacer"/>
        <Button
            android:id="@+id/button_set_default_preferences"
            android:text="@string/preferences_button_set"
            android:background="@drawable/button_angular"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacer"/>

        <!-- Datasystem -->
        <TextView
            android:text="@string/data_system_header"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_header"
            android:padding="@dimen/padding_header"/>
        <CheckBox
            android:id="@+id/data_system_checkbox"
            android:text="@string/data_system_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/data_system_description"
            android:text="@string/data_system_description"
            android:textColor="@color/light_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/data_system_text_field"
            android:inputType="text"
            android:hint="@string/data_system_text_field"
            android:autofillHints=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/data_system_button_save"
                android:text="@string/data_system_button_save"
                android:textColor="@color/text_color_button"
                android:backgroundTint="@color/background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/data_system_button_load"/>
            <Button
                android:id="@+id/data_system_button_load"
                android:text="@string/data_system_button_load"
                android:textColor="@color/text_color_button"
                android:backgroundTint="@color/background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/data_system_button_save"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Room -->
        <TextView
            android:text="@string/room_header"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_header"
            android:padding="@dimen/padding_header"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacer"/>
        <Button
            android:id="@+id/room_button_create"
            android:text="@string/room_button_create"
            android:background="@drawable/button_angular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacer"/>
        <Button
            android:id="@+id/room_button_show"
            android:text="@string/room_button_show"
            android:background="@drawable/button_angular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacer"/>

        <!-- Provider -->
        <TextView
            android:text="@string/provider_header"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_header"
            android:padding="@dimen/padding_header"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacer"/>
        <Button
            android:id="@+id/button_content_provider"
            android:text="@string/provider_button"
            android:background="@drawable/button_angular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>